25.feb (tb)
      - adding Lithuanian (mscore_lt.ts) language
24.feb (ws)
      - rest property changes are applied to all selected rests.
22.feb (ws)
      - build system updates for Clang c++ compiler
21.feb (ws)
      - new drop functions:
            - control + drop key signature drops ks to all staves
            (this functionality should also be added to other element types).
      - new drag functions:
            - control+drag restricts to horizontal movement
            - shift+drag   restricts to vertical movement
      - more functionality for chord style editor:
            - its now possible to drag new elements from font table to chord symbol
            - delete selected element
19.feb (lv)
      - MusicXML import fixes: Jumps and Markers
       (ws)
      - new style element: ST_dontHideStavesInFirstSystem
      - implementation of "repitch" mode for note entry
      - "add soundfont" must be prepended in the synthesizer font list
      - load soundfont list in the proper order
      - fix #9263: down button in synthesizer causes crash
      - move note heads in edit mode is now undoable
      - fix #9316: double-clicking tied note removes tie
      - fix #9253: line text properties cannot be edited until the text is created
      (db)
      - copy editing for demo scores (usuariomuse)
18.feb (ws)
      - make "use native file dialogs" a runtime option selectable in preferences
      - implement simple raster
17.feb (ws)
      - allow drop of Articulations (Fermata) to (end) barlines
      - new meta for footer/header text:
            $f    is replaced by score name
            $F    is replaced by absolute score file path + name
      - add default filename for qt save file dialog
15.feb (ws)
      - implement ST_systemFrameDistance style parameter
      - fix: when removing a measure, dont remove following vbox
      (mi)
      - improved tab<->pitched staff type conversion (to be completed) (r.4017)
14.feb (ws)