@@ -79,43 +79,90 @@ extern qreal DPMM;      // logical dots/mm
 enum ElementType {
       INVALID = -1,
       SYMBOL  = 0,
-      TEXT, SLUR_SEGMENT, BAR_LINE,
-      STEM_SLASH, LINE, BRACKET,
+      TEXT,
+      INSTRUMENT_NAME,
+      SLUR_SEGMENT,
+      BAR_LINE,
+      STEM_SLASH,
+      LINE,
+      BRACKET,
       ARPEGGIO,
-      ACCIDENTAL, NOTE,
+      ACCIDENTAL,
+      NOTE,
       STEM,
-      CLEF, KEYSIG, TIMESIG, REST,
-      BREATH, GLISSANDO,
+      CLEF,
+      KEYSIG,
+      TIMESIG,
+      REST,
+      BREATH,
+      GLISSANDO,
       REPEAT_MEASURE,
       IMAGE,
 /*19*/TIE,
-      ARTICULATION, CHORDLINE, DYNAMIC, BEAM, HOOK, LYRICS, MARKER, JUMP,
+      ARTICULATION,
+      CHORDLINE,
+      DYNAMIC,
+      BEAM,
+      HOOK,
+      LYRICS,
+      MARKER,
+      JUMP,
       FINGERING,
       TUPLET,
 /*30*/TEMPO_TEXT,
       STAFF_TEXT,
       INSTRUMENT_CHANGE,
-      HARMONY, FRET_DIAGRAM, BEND, TREMOLOBAR,
+      HARMONY,
+      FRET_DIAGRAM,
+      BEND,
+      TREMOLOBAR,
       VOLTA,
-      HAIRPIN_SEGMENT, OTTAVA_SEGMENT, TRILL_SEGMENT, TEXTLINE_SEGMENT,
+      HAIRPIN_SEGMENT,
+      OTTAVA_SEGMENT,
+      TRILL_SEGMENT,
+      TEXTLINE_SEGMENT,
       VOLTA_SEGMENT,
-      LAYOUT_BREAK, SPACER, STAFF_STATE,
+      LAYOUT_BREAK,
+      SPACER,
+      STAFF_STATE,
       LEDGER_LINE,
-      NOTEHEAD, NOTEDOT, TREMOLO,
-      MEASURE, STAFF_LINES,
-      CURSOR, SELECTION, LASSO, SHADOW_NOTE, RUBBERBAND,
+      NOTEHEAD,
+      NOTEDOT,
+      TREMOLO,
+      MEASURE,
+      STAFF_LINES,
+      CURSOR,
+      SELECTION,
+      LASSO,
+      SHADOW_NOTE,
+      RUBBERBAND,
       TAB_DURATION_SYMBOL,
       FSYMBOL,
       PAGE,
 
       // not drawable elements:
-      HAIRPIN, OTTAVA, PEDAL, TRILL, TEXTLINE,
-      SEGMENT, SYSTEM, COMPOUND, CHORD, SLUR,
+      HAIRPIN,
+      OTTAVA,
+      PEDAL,
+      TRILL,
+      TEXTLINE,
+      SEGMENT,
+      SYSTEM,
+      COMPOUND,
+      CHORD,
+      SLUR,
 
       // special types for drag& drop:
-      ELEMENT, ELEMENT_LIST, STAFF_LIST, MEASURE_LIST, LAYOUT,
+      ELEMENT,
+      ELEMENT_LIST,
+      STAFF_LIST,
+      MEASURE_LIST,
+      LAYOUT,
 
-      HBOX, VBOX, TBOX, FBOX,
+      HBOX,
+      VBOX,
+      TBOX,
+      FBOX,
       ICON,
       ACCIDENTAL_BRACKET,
       MAXTYPE
