@@ -3,7 +3,7 @@
 //  Linux Music Score Editor
 //  $Id$
 //
-//  Copyright (C) 2002-2009 Werner Schweer and others
+//  Copyright (C) 2002-2011 Werner Schweer and others
 //
 //  This program is free software; you can redistribute it and/or modify
 //  it under the terms of the GNU General Public License version 2.
@@ -1008,5 +1008,16 @@ bool Selection::canCopy() const
                   return false;
             }
       return true;
+      }
+
+//---------------------------------------------------------
+//   reconstructElementList
+//    reconstruct list of selected elements after
+//    undo/redo
+//---------------------------------------------------------
+
+void Selection::reconstructElementList()
+      {
+      searchSelectedElements();
       }
 
