@@ -3,7 +3,7 @@
 //  Linux Music Score Editor
 //  $Id$
 //
-//  Copyright (C) 2002-2010 Werner Schweer and others
+//  Copyright (C) 2002-2011 Werner Schweer and others
 //
 //  This program is free software; you can redistribute it and/or modify
 //  it under the terms of the GNU General Public License version 2.
@@ -103,6 +103,7 @@ class Selection {
       void setStaffEnd(int v)           { _staffEnd = v;    }
       void setActiveTrack(int v)        { _activeTrack = v; }
       bool canCopy() const;
+      void reconstructElementList();
       void updateSelectedElements();
       };
 
